[package]
name = "generic-cursors"
version = "0.0.3"
authors = ["Zachary S"]
edition = "2021"
description = "A generic way to mutably traverse acyclic recursive data structures."
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
repository = "https://github.com/zachs18/generic-cursors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
